traces/bug_502.txt
examples++-load/distance.cpp:521: error: DEAD_STORE
  The value written to &mps (type Fem2D::MeshPoint*) is never used.
Showing all 1 steps of the trace


examples++-load/distance.cpp:521:48: Write of unused value
519.       double distneginf = std::numeric_limits<double>::min();
520.       
521.       MeshPoint *mp(MeshPointStack(stack)) , mps=*mp;
                                                      ^
522.       double isovalue=0.;
523.       ffassert(pTh);
